--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,20 @@
     <!-- Dependencies: External libraries your project needs -->
     <dependencies>
         <!-- Dependency 1: JUnit for testing -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.9.2</version>
-            <scope>test</scope>  <!-- Used only during testing -->
-        </dependency>
+       <dependency>
+    <groupId>org.junit.jupiter</groupId>
+     <artifactId>junit-jupiter-api</artifactId>
+     <version>5.9.2</version>
+     <scope>test</scope>
+   </dependency>
+
+   <dependency>
+     <groupId>org.junit.jupiter</groupId>
+     <artifactId>junit-jupiter-engine</artifactId>
+     <version>5.9.2</version>
+     <scope>test</scope>
+   </dependency>
+
 
         <!-- Dependency 2: Apache Commons Math (for statistics etc.) -->
         <dependency>
